add basic form styling

--- a/index.html
+++ b/index.html
@@ -11,21 +11,37 @@
 </head>
 
 <body>
-    <form id="form">
-        <label>Enter URL: <input type="text" required name="url"> </label>
-        <label>Video<input type="radio" required name="url" value="video"></label>
-        <label>Playlist<input type="radio" required name="url" value="video"></label>
-        <label>Highest Quality: <select name="quality" id="quality">
-                <option value="144">144p</option>
-                <option value="240">240p</option>
-                <option value="360">360p</option>
-                <option value="480">480p</option>
-                <option value="720">720p</option>
-                <option value="1080">1080p</option>
-                <option value="2160">2160p</option>
-            </select></label>
-        <label>Output Directory <button id="dir-picker">Pick</button><input type="text" id="dir-input" disabled required name="dir" value="/"></label>
-        <button>Submit</button>
+    <form id="form" class="form">
+        <fieldset>
+
+            <label>Enter URL: <input type="text" required name="url"> </label>
+
+            <div class="radio-buttons">
+                <label>Video<input checked type="radio" required name="url" value="video"></label>
+                <label>Playlist<input type="radio" required name="url" value="video"></label>
+            </div>
+
+            <label>Highest Quality: <select name="quality" id="quality">
+                    <option value="144">144p</option>
+                    <option value="240">240p</option>
+                    <option value="360">360p</option>
+                    <option value="480">480p</option>
+                    <option value="720">720p</option>
+                    <option value="1080">1080p</option>
+                    <option value="2160">2160p</option>
+                </select></label>
+            <label class="dir-label">
+                <div>
+                    Output Directory: <button id="dir-picker">Pick</button>
+                </div>
+                <input type="text" id="dir-input" class="dir-input" disabled required name="dir" value="/">
+            </label>
+            <button class="download-button">Download</button>
+            <div class="progress-container">
+                <p>Waiting: <span class="percentage hidden">0%</span></p>
+                <progress id="progress" value="0" max="100">
+            </div>
+        </fieldset>
     </form>
 
 </body>
