--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
             <label>Enter URL: <input type="text" required name="url"> </label>
 
-            <div class="radio-buttons">
-                <label>Video<input checked type="radio" required name="url" value="video"></label>
-                <label>Playlist<input type="radio" required name="url" value="video"></label>
-            </div>
+            <!-- <div class="radio-buttons">
+                <label>Video<input checked type="radio" required name="type" value="video"></label>
+                <label>Playlist<input type="radio" required name="type" value="playlist"></label>
+            </div> -->
 
-            <label>Highest Quality: <select name="quality" id="quality">
+            <!-- <label>Highest Quality: <select name="quality" id="quality">
                     <option value="144">144p</option>
                     <option value="240">240p</option>
                     <option value="360">360p</option>
@@ -29,16 +29,16 @@
                     <option value="720">720p</option>
                     <option value="1080">1080p</option>
                     <option value="2160">2160p</option>
-                </select></label>
+                </select></label> -->
             <label class="dir-label">
                 <div>
                     Output Directory: <button id="dir-picker">Pick</button>
                 </div>
-                <input type="text" id="dir-input" class="dir-input" disabled required name="dir" value="/">
-            </label>
+           <input type="text" name="dir-input" class="dir-input" id="dir-input" required >
+        </label>
             <button class="download-button">Download</button>
             <div class="progress-container">
-                <p>Waiting: <span class="percentage hidden">0%</span></p>
+                <p>Waiting: <span class="percentage hidden" id="percentage">0%</span></p>
                 <progress id="progress" value="0" max="100">
             </div>
         </fieldset>
