make fake download working

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             <button class="download-button">Download</button>
             <div class="progress-container">
-                <p class="percentage-label">Awaiting Input..</p>
+                <p id="progress-label">Awaiting Input..</p>
                 <progress id="progress" value="0" max="100">
             </div>
         </fieldset>
