implement basic error handling

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <option value="720">720p</option>
                     <option value="1080">1080p</option>
                 </select></label>
-            <div> 
+            <div>
                 <div class="dir-input-container">
                     Output Directory:
                     <label class="dir-label">
@@ -35,7 +35,8 @@
                         <input type="file" nwdirectory id="dir-input-hidden">
                     </label>
                 </div>
-                <input type="text" placeholder="Enter Directory Path" value="/home/prince" name="dir" class="dir-input" id="dir-input" required>
+                <input type="text" placeholder="Enter Directory Path" value="/home/prince" name="dir" class="dir-input"
+                    id="dir-input" required>
             </div>
 
             <button class="download-button">Download</button>
@@ -44,8 +45,8 @@
                 <progress id="progress" value="0" max="100">
             </div>
         </fieldset>
+        <div id="error" class="error"></div>
     </form>
-
 </body>
 
 </html>
