--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <form id="form" class="form">
         <fieldset>
             <label>Enter URL: <input type="text" required name="url" value="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> </label>
+            <label class="cookie-label"> <span title="your youtube cookie, you can get it easily via dev tools. it helps prevent youtube rate limits"> &#9432;</span> &nbsp; Cookie (optional): <input type="text" name="cookie" value=""> </label>
             <div class="radio-buttons">
                 <label>Video<input checked type="radio" required name="type" value="video"></label>
                 <label>Playlist<input type="radio" required name="type" value="playlist"></label>
