--- a/index.html
+++ b/index.html
@@ -11,10 +11,26 @@
 </head>
 
 <body>
+    <header>
+        <h1 class="heading">Youtube Downloader</h1>
+    </header>
     <form id="form" class="form">
         <fieldset>
-            <label>Enter URL: <input type="text" required name="url" value="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> </label>
-            <label class="cookie-label"> <span title="your youtube cookie, you can get it easily via dev tools. it helps prevent youtube rate limits"> &#9432;</span> &nbsp; Cookie (optional): <input type="text" name="cookie" value=""> </label>
+            <label class="field-label">Enter URL: <input type="text" required name="url"
+                    value="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> </label>
+            <label class="cookie-label">
+                <div>
+                    <div>
+                        <span
+                            title="your youtube cookie, you can get it easily via dev tools. it helps prevent youtube rate limits">
+                            &#9432;
+                        </span>
+                        &nbsp;Cookie:
+                    </div>
+                    <div>(optional)</div>
+                </div>
+                <input type="text" name="cookie" value="">
+            </label>
             <div class="radio-buttons">
                 <label>Video<input checked type="radio" required name="type" value="video"></label>
                 <label>Playlist<input type="radio" required name="type" value="playlist"></label>
@@ -36,8 +52,8 @@
                         <input type="file" nwdirectory id="dir-input-hidden">
                     </label>
                 </div>
-                <input type="text" placeholder="Enter Directory Path" value="/home/prince/Desktop/test" name="dir" class="dir-input"
-                    id="dir-input" required>
+                <input type="text" placeholder="Enter Directory Path" value="/home/prince/Desktop/test" name="dir"
+                    class="dir-input" id="dir-input" required>
             </div>
 
             <button class="download-button">Download</button>
