--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
+    <script src = "/socket.io/socket.io.js"></script>
     <script src="./index.js" defer type="module"></script>
     <title>Youtube Downloader</title>
     <link rel="stylesheet" href="index.css">
