add dir picker function

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -47,9 +47,9 @@
             <div>
                 <div class="dir-input-container">
                     Output Directory:
-                    <label class="dir-label">
+                    <label class="dir-label" id="dir-label">
                         <div class="dir-picker">Pick</div>
-                        <input type="file" nwdirectory id="dir-input-hidden">
+                        <input type="file" id="dir-input-hidden">
                     </label>
                 </div>
                 <input type="text" placeholder="Enter Directory Path" value="/home/prince/Desktop/test" name="dir"
