--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="./index.js" defer type="module"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youtube Downloader</title>
+    <script src="index.js" defer type="module"></script>
     <link rel="stylesheet" href="index.css">
 </head>
 
@@ -14,59 +14,59 @@
     <header>
         <h1 class="heading">Youtube Downloader</h1>
     </header>
-    <form id="form" class="form">
-        <fieldset>
-            <label class="field-label">Enter URL: <input type="text" required name="url"
-                    value="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> </label>
-            <label class="cookie-label">
+    <main>
+        <form id="form">
+            <label class="text-label">
                 <div>
-                    <div>
-                        <span
-                            title="your youtube cookie, you can get it easily via dev tools. it helps prevent youtube rate limits">
-                            &#9432;
-                        </span>
-                        &nbsp;Cookie:
-                    </div>
-                    <div>(optional)</div>
+                    URL:
                 </div>
-                <input type="text" name="cookie" value="">
+                <input type="text" required name="url" placeholder="URL">
             </label>
-            <div class="radio-buttons">
-                <label>Video<input checked type="radio" required name="type" value="video"></label>
-                <label>Playlist<input type="radio" required name="type" value="playlist"></label>
-            </div>
-
-            <!-- <label>Highest Quality: <select name="quality" id="quality">
-                    <option value="144">144p</option>
-                    <option value="240">240p</option>
-                    <option value="360">360p</option>
-                    <option value="480">480p</option>
-                    <option value="720">720p</option>
-                    <option value="1080">1080p</option>
-                </select></label> -->
-            <div>
-                <div class="dir-input-container">
-                    Output Directory:
-                    <label class="dir-label" id="dir-label">
-                        <div class="dir-picker">Pick</div>
-                        <input type="file" id="dir-input-hidden">
-                    </label>
+            <label class="text-label">
+                <div>
+                    <span title="Your Youtube Cookie, read readme for more info">&#9432;</span>
+                    Cookie (optional):
                 </div>
-                <input type="text" placeholder="Enter Directory Path" value="/home/prince/Desktop/test" name="dir"
-                    class="dir-input" id="dir-input" required>
+                <input type="text" name="cookie" placeholder="cookie">
+            </label>
+            <div class="radio-buttons" id="radio-buttons">
+                <label class="radio-label">Video<input checked type="radio" name="type" value="video"></label>
+                <label class="radio-label">Playlist<input type="radio" name="type" value="playlist"></label>
             </div>
-
-            <div class="buttons">
-                <button class="download-button">Download</button>
-                <button class="stop-button" id="stop-button">Stop</button>
+            <div class="index-inputs disabled">
+                <label class="text-label">
+                    <div>
+                        Starting Video Number:
+                    </div>
+                    <input type="text" required name="index-start" id="index-start" placeholder="First Video Number"
+                        value="1">
+                </label>
+                <label class="text-label">
+                    <div>
+                        Last Video Number:
+                    </div>
+                    <input type="text" name="index-end" id="index-end" placeholder="Leave Empty for all" value="">
+                </label>
             </div>
-            <div class="progress-container">
-                <p id="progress-label">Awaiting Input..</p>
-                <progress id="progress" value="0" max="100">
+            <label class="text-label">
+                <div>
+                    Pick Output Directory: <button id="pick-button">Pick</button>
+                </div>
+                <input type="text" required name="path" id="path" placeholder="Path to Output">
+            </label>
+            <div class="control-buttons">
+                <button id="download-button">Download</button>
+                <button id="stop-button">Stop</button>
             </div>
-        </fieldset>
-        <div id="error" class="error"></div>
-    </form>
+        </form>
+        <div class="progress-container">
+            <div id="progress-text" class="progress-text">Awaiting Input..</div>
+            <progress id="progress" class="progress" value="0" max="100">
+        </div>
+        <div class="error">
+            Sample Error
+        </div>
+    </main>
 </body>
 
 </html>
