--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youtube Downloader</title>
     <script src="index.js" defer type="module"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <link rel="stylesheet" href="index.css">
 </head>
 
