--- a/frontend/index.html
+++ b/frontend/index.html
@@ -67,7 +67,7 @@
             <div id="progress-text" class="progress-percentage"></div>
             <progress id="progress" class="progress" value="0" max="100">
         </div>
-        <div class="error">
+        <div class="error" id="error">
         </div>
     </main>
 </body>
