implement download function

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,7 @@
                 <div>
                     URL:
                 </div>
-                <input type="text" required name="url" placeholder="URL">
+                <input type="text" required name="url" placeholder="URL" value="https://www.youtube.com/watch?v=K4TOrB7at0Y">
             </label>
             <label class="text-label form-element">
                 <div>
@@ -55,7 +55,7 @@
                 <div>
                     Pick Output Directory: <button id="pick-button" class="pick-button button">Pick</button>
                 </div>
-                <input type="text" required name="path" id="path" placeholder="Path to Output">
+                <input type="text" required name="path" id="path" placeholder="Path to Output" value="/home/prince/Desktop">
             </label>
             <div class="control-buttons form-element">
                 <button id="download-button" class="button">Download</button>
